--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2778,6 +2778,8 @@ NLP/KG Field：
 <!-- Zhejiang University-->
     <a href="https://zxlzr.github.io/" target="_blank">Ningyu Zhang</a>
     |
+    <a href="https://231sm.github.io/" target="_blank">Shumin Deng</a>
+    |
     <a href="http://yangy.org/" target="_blank">Yang Yang</a>
     |
     <a href="https://person.zju.edu.cn/jieyang#0" target="_blank">Jie Yang</a>
