--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1134,7 +1134,12 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/jObP_dY1M60Z3NmuMbLX7w" target="_blank">GPT之父谈未来五年的AI：模型规模见顶，下个突破点在用好AI涌现特质</a>
     | 
     <a href="https://mp.weixin.qq.com/s/DsCZ5jG4fndIYLhpskUXyA" target="_blank">大语言模型时代的知识工程 | TF97回顾</a>
-    |                                                                 
+    |
+  <!-- 4.28 -->
+    <a href="https://mp.weixin.qq.com/s/9UvPGrM9bWtnkjqGBV3oDw" target="_blank">用 AudioGPT 输入自然语言，可以让 ChatGPT 唱歌了？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/b88tyIxOinM_iVGPmYMxSg" target="_blank">用 直接攻击，越狱攻击，道德攻击……这样做，ChatGPT 就会泄漏你的隐私</a>
+    |                                                                  
 </br>
 </br>
 AI论文: 
