--- a/pages/activities.html
+++ b/pages/activities.html
@@ -239,6 +239,10 @@
     <li><strong>Invited Reviewer</strong>, Sensors (<a href="http://www.mdpi.com/journal/sensors/"><strong><u><font color="#874e26">Sensors</font></u></strong></a>)</li>
 
 
+<!-- 2023.04.28 收到的审稿邀请 -->
+    <li><strong>Invited Reviewer</strong>, Neurocomputing (<a href="https://www.sciencedirect.com/journal/neurocomputing"><strong><u><font color="#874e26">Neurocomputing</font></u></strong></a>)</li>
+
+
     <!-- \item {计算机研究与发展}  -->
     <li><strong>Invited Reviewer</strong>, Journal of Computer Research and Development (<a href="https://crad.ict.ac.cn/CN/1000-1239/home.shtml"><strong><u><font color="#874e26">JCRD</font></u></strong></a>)</li>
 
