--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1139,7 +1139,25 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/9UvPGrM9bWtnkjqGBV3oDw" target="_blank">用 AudioGPT 输入自然语言，可以让 ChatGPT 唱歌了？</a>
     |
     <a href="https://mp.weixin.qq.com/s/b88tyIxOinM_iVGPmYMxSg" target="_blank">用 直接攻击，越狱攻击，道德攻击……这样做，ChatGPT 就会泄漏你的隐私</a>
-    |                                                                  
+    |
+  <!-- 5.3 -->
+    <a href="https://mp.weixin.qq.com/s/p5E4F7FkGxsl96zreHFSsw" target="_blank">万字长文讲述大模型与知识图谱的关系</a>
+    |
+  <!-- 5.4 -->
+    <a href="https://mp.weixin.qq.com/s/NyoSRvdk-_kVMbwQf2RgEQ" target="_blank">哈工大自然语言处理研究所公开《ChatGPT调研报告》，内测哈工大“活字”对话大模型</a>
+    |
+  <!-- 5.5 -->
+    <a href="https://mp.weixin.qq.com/s/L3-Byo-DciVDrADwNmKQvg" target="_blank">ChatGPT调研报告（2023）</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/JzGoH3n6ACFDzJhOkiOZlA" target="_blank">ChatLLM Network: More brains, More intelligence</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/OZjPnNE5aOOZqCQY6cG_fA" target="_blank">微软Bing突然爆炸级更新！BingChat全面开放，下一代搜索要来啦！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/luro5hI-JajzVhw8Xw_gaQ" target="_blank">UC伯克利发布大语言模型排行榜！Vicuna夺冠，清华ChatGLM进前5</a>
+    |
+   <!-- 5.7 -->
+    <a href="https://mp.weixin.qq.com/s/K7AODzfeeytw-_ye8dJzbA" target="_blank">达摩院猫头鹰mPLUG-Owl亮相：模块化多模态大模型，追赶GPT-4多模态能力</a>
+    |                                                                         
 </br>
 </br>
 AI论文: 
