--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1146,6 +1146,8 @@ ChatGPT:
   <!-- 5.4 -->
     <a href="https://mp.weixin.qq.com/s/NyoSRvdk-_kVMbwQf2RgEQ" target="_blank">哈工大自然语言处理研究所公开《ChatGPT调研报告》，内测哈工大“活字”对话大模型</a>
     |
+    <a href="https://mp.weixin.qq.com/s/yu8aTglovZEvNqcUamclqg" target="_blank">他山之石丨图灵奖得主LeCun：ChatGPT局限巨大，自回归模型寿命不超5年</a>
+    |
   <!-- 5.5 -->
     <a href="https://mp.weixin.qq.com/s/L3-Byo-DciVDrADwNmKQvg" target="_blank">ChatGPT调研报告（2023）</a>
     |  
@@ -1157,6 +1159,9 @@ ChatGPT:
     |
    <!-- 5.7 -->
     <a href="https://mp.weixin.qq.com/s/K7AODzfeeytw-_ye8dJzbA" target="_blank">达摩院猫头鹰mPLUG-Owl亮相：模块化多模态大模型，追赶GPT-4多模态能力</a>
+    |
+   <!-- 5.8 -->
+    <a href="https://mp.weixin.qq.com/s/1kMFFtL9o1yEfkl_N-Q_kQ" target="_blank">他山之石丨复杂推理：大语言模型的北极星能力</a>
     |                                                                         
 </br>
 </br>
@@ -2864,6 +2869,13 @@ NLP/KG Field：
 <!-- 360 -->
     <a href="https://liuhuanyong.github.io/" target="_blank">Huanyong Liu</a>
     |
+  <br />
+  <br />
+GNN Field：
+<br />
+<!-- The Hong Kong Polytechnic University -->
+    <a href="https://wanyu-lin.github.io/" target="_blank">Wanyu Lin</a>
+    |    
   <br />
   <br />
 NLP Field：
