--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -401,6 +401,9 @@
     |
     <a href="https://agist.org//iccsi2023" target="_blank">ICCSI</a>
     |
+<!-- biological information -->
+    <a href="https://ccbr99.cn/" target="_blank">CCBR</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/RyottZj01o-H9OvuST8jJg" target="_blank">Soundness？Excitement？官方解读ACL 2023论文评分机制</a>
     |
@@ -1162,7 +1165,9 @@ ChatGPT:
     |
    <!-- 5.8 -->
     <a href="https://mp.weixin.qq.com/s/1kMFFtL9o1yEfkl_N-Q_kQ" target="_blank">他山之石丨复杂推理：大语言模型的北极星能力</a>
-    |                                                                         
+    |   
+    <a href="https://mp.weixin.qq.com/s/CNODZmTW7QJAJ42ZSCWqrA" target="_blank">可复现、自动化、低成本、高评估水平，首个自动化评估大模型的大模型PandaLM来了</a>
+    |                                                                        
 </br>
 </br>
 AI论文: 
