--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -404,6 +404,8 @@
 <!-- biological information -->
     <a href="https://ccbr99.cn/" target="_blank">CCBR</a>
     |
+    <a href="https://www.prcv2023.cn/2023prcv/" target="_blank">PRCV</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/RyottZj01o-H9OvuST8jJg" target="_blank">Soundness？Excitement？官方解读ACL 2023论文评分机制</a>
     |
@@ -1167,6 +1169,8 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/1kMFFtL9o1yEfkl_N-Q_kQ" target="_blank">他山之石丨复杂推理：大语言模型的北极星能力</a>
     |   
     <a href="https://mp.weixin.qq.com/s/CNODZmTW7QJAJ42ZSCWqrA" target="_blank">可复现、自动化、低成本、高评估水平，首个自动化评估大模型的大模型PandaLM来了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/R8NlrW1de90F__RR5O-ueA" target="_blank">大语言模型（LLM）分布式训练框架总结</a>
     |                                                                        
 </br>
 </br>
@@ -1175,7 +1179,7 @@ AI论文:
     <a href="https://mp.weixin.qq.com/s/7os1M2aPjuPDuY0CnZse4A" target="_blank">2022年「百强AI论文」出炉：清华紧随谷歌排名第二，宁波工程学院成最大黑马</a>
     |
 
-</br>
+</br> 
 </br>
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
