--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -355,6 +355,8 @@
     |
 <!-- others -->
 <!-- Computational Linguistics -->
+    <a href="http://www.afnlp.org/conferences/ijcnlp2023/wp/" target="_blank">AACL</a>
+    |
     <a href="http://cips-cl.org/static/CCL2023/index.html" target="_blank">CCL</a>
     |
     <a href="https://sigkg.cn/ccks2023/" target="_blank">CCKS</a>
@@ -373,7 +375,7 @@
     |
     <a href="http://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
-    <a href="#" target="_blank">ChinaService</a>
+    <a href="https://ccf.org.cn/service2023" target="_blank">ChinaService</a>
     |
     <a href="#" target="_blank">ChineseCSCW</a>
     |
@@ -1162,6 +1164,11 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/luro5hI-JajzVhw8Xw_gaQ" target="_blank">UC伯克利发布大语言模型排行榜！Vicuna夺冠，清华ChatGLM进前5</a>
     |
+   <!-- 5.6 -->
+    <a href="https://mp.weixin.qq.com/s/GimP7w9n4SKmba9WPV4MGQ" target="_blank">最新研究，GPT-4暴露了缺点！无法完全理解语言歧义！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/z7MMlO1vfE9hvmO8VpYMFQ" target="_blank">离谱！最新研究：61%中国人写的英语论文，会被ChatGPT检测器判为AI生成的</a>
+    |
    <!-- 5.7 -->
     <a href="https://mp.weixin.qq.com/s/K7AODzfeeytw-_ye8dJzbA" target="_blank">达摩院猫头鹰mPLUG-Owl亮相：模块化多模态大模型，追赶GPT-4多模态能力</a>
     |
@@ -1171,7 +1178,28 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/CNODZmTW7QJAJ42ZSCWqrA" target="_blank">可复现、自动化、低成本、高评估水平，首个自动化评估大模型的大模型PandaLM来了</a>
     | 
     <a href="https://mp.weixin.qq.com/s/R8NlrW1de90F__RR5O-ueA" target="_blank">大语言模型（LLM）分布式训练框架总结</a>
-    |                                                                        
+    |
+    <a href="https://mp.weixin.qq.com/s/lrnRM6m5xjYuRk1cQHByTg" target="_blank">还能这么玩？清华给 ChatGPT 做逆向，发现了 ChatGPT 的进化轨迹！</a>
+    |
+   <!-- 5.9 -->
+    <a href="https://mp.weixin.qq.com/s/QeAV6hOLAlfZgW_azTiCLw" target="_blank">FCS 2023｜数研院发表面向序贯决策任务的大模型算法综述</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/NFWrTmJxAPNhrs6K8Ylj3w" target="_blank">GPT-4 开始内测 32000 输入长度的版本了！你收到邀请了吗?</a>
+    | 
+   <!-- 5.10 -->
+    <a href="https://mp.weixin.qq.com/s/elVSpp_pQKp_XCgWLmhwRQ" target="_blank">能看图、会聊天，还会跨模态推理和定位，能落地复杂场景的DetGPT来了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_XtQuuiv6JOwgCTEFMJ9gw" target="_blank">重磅！OpenAI最新研究：用GPT-4解释神经元行为，网友：AI套娃？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/COByThDpn6pVICGD6dMG0Q" target="_blank">VPGTrans: 10%的成本定制你自己的类GPT-4多模态大模型</a>
+    |
+   <!-- 5.11 -->
+    <a href="https://mp.weixin.qq.com/s/HsyJ272c3joHo_4EeDOrWg" target="_blank">新大模型能超GPT-4，Bard全面升级，谷歌反击ChatGPT</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/sUUUx6O9qqmQiJS3MUsFzA" target="_blank">他山之石丨Google DeepMind最新研究：如何将人类价值观融入AI？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/InhoUckY1OCtV2jQzK0RhA" target="_blank">追赶GPT-4的多模态大模型对比分析</a>
+    |                                                                             
 </br>
 </br>
 AI论文: 
