--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1199,7 +1199,14 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/sUUUx6O9qqmQiJS3MUsFzA" target="_blank">他山之石丨Google DeepMind最新研究：如何将人类价值观融入AI？</a>
     |
     <a href="https://mp.weixin.qq.com/s/InhoUckY1OCtV2jQzK0RhA" target="_blank">追赶GPT-4的多模态大模型对比分析</a>
-    |                                                                             
+    |
+    <a href="https://mp.weixin.qq.com/s/euupeZmgNobfOBGuXvV1hg" target="_blank">谷歌全面反攻 ChatGPT！PaLM 2、Gemini 双杀，Bard 正式开放</a>
+    |
+   <!-- 5.13 -->
+    <a href="https://mp.weixin.qq.com/s/Gg-zbhzJcqmU0guSSvWpXg" target="_blank">羊驼系列大模型和ChatGPT差多少？详细测评后，我沉默了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Jymq2ho3VQx7-o6y-JHxeg" target="_blank">赛尔笔记|大模型的涌现能力介绍</a>
+    |                                                                              
 </br>
 </br>
 AI论文: 
@@ -3264,6 +3271,8 @@ Biochemistry Field：
 Food Computation Field：
 <br />
     <a href="http://vireo.cs.cityu.edu.hk/jingjing/" target="_blank">Jingjing Chen [<a href="https://mp.weixin.qq.com/s/ZzRZFb4FKIy2mDwMNguf3g" target="_blank">Report</a>]</a>
+    |
+    <a href="https://vipl.ict.ac.cn/people/wqmin/" target="_blank">Weiqing Min</a>
     |
   <br />
   <br />
