--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -396,6 +396,9 @@
 <!-- IR -->
     <a href="http://www.sigir-ap.org/sigir-ap-2023/" target="_blank">SIGIR-AP</a>
     |
+<!-- bigdata -->
+    <a href="https://conf.ccf.org.cn/web/html6/index.html?globalId=m1091358576578007040168024176111&type=1" target="_blank">CCF BigData</a>
+    |
 <!-- database -->
     <a href="https://ccf.org.cn/ndbc2023" target="_blank">NDBC</a>
     |
@@ -479,6 +482,10 @@ Graph Representation:
 Knowledge Graphs: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/kqnqO7DiWLKXj3AcKg-BuQ" target="_blank">知识就是AI的力量：从知识工程到知识图谱全面回顾</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/PSWbTe5Pi2OZ3qy0DNNFpw" target="_blank">知识就是AI的力量：从知识工程到知识图谱全面回顾 (新)</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/h6M7mrkrGH1D5b9McWWwUw" target="_blank">技术动态 | 利用知识图谱克服人工智能幻觉</a>
     |
 </br>
 </br>
@@ -1202,11 +1209,37 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/euupeZmgNobfOBGuXvV1hg" target="_blank">谷歌全面反攻 ChatGPT！PaLM 2、Gemini 双杀，Bard 正式开放</a>
     |
+    <a href="https://mp.weixin.qq.com/s/0wsC1JnD0pmG9K9eE0dqnA" target="_blank">谷歌杀回来啦！发布全新PaLM 2，代码、推理能力反超GPT-4！</a>
+    |
+   <!-- 5.12 -->
+    <a href="https://mp.weixin.qq.com/s/Y9BQfmrkjmr_6_-16154cA" target="_blank">Prompt都不需要了，动动手就能玩多模态对话系统，iChat来啦！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/mKXw1A06Wyjznekhfuz4Hg" target="_blank">百度文心一言在国产模型中倒数？我看懵了</a>
+    |      
    <!-- 5.13 -->
     <a href="https://mp.weixin.qq.com/s/Gg-zbhzJcqmU0guSSvWpXg" target="_blank">羊驼系列大模型和ChatGPT差多少？详细测评后，我沉默了</a>
     | 
     <a href="https://mp.weixin.qq.com/s/Jymq2ho3VQx7-o6y-JHxeg" target="_blank">赛尔笔记|大模型的涌现能力介绍</a>
-    |                                                                              
+    |
+    <a href="https://mp.weixin.qq.com/s/fBYST0OhiM5NbEJYEq5Tyw" target="_blank">ChatGPT 联网和插件功能，下周起可直接使用，无需排队！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/TJpXJRIIPPiALNRhgdxm7Q" target="_blank">上海AI lab提出VideoChat：可以与视频对话啦</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/3Xj7oMh7EVwsoZXDSuHVow" target="_blank">GPT-4最强竞品迎来重磅升级：一次10万token，百页资料一分钟总结完毕</a>
+    |   
+   <!-- 5.15 -->
+    <a href="https://mp.weixin.qq.com/s/RqiJvhH4sdtHBVIDZXmu5Q" target="_blank">中科院发布多模态 ChatGPT，图片、语言、视频都可以 Chat ？中文多模态大模型力作</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/tschjdYD-GlrfH00yW0AgA" target="_blank">谷歌 Bard 大升级超越 ChatGPT：这 10 个功能 ChatGPT 也做不到</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/cWF0YtoCZ3shq2DHLV8hXA" target="_blank">女网红靠GPT-4交1000+男友，聊天按分钟收费，一周收入50万</a>
+    |
+   <!-- 5.16 -->
+    <a href="https://mp.weixin.qq.com/s/9TmW5nwLLjg9eZ59nv91Qg" target="_blank">重磅内幕：OpenAI即将开源新模型！开源社区的繁荣，全靠大厂「施舍」？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/VleZkQT6Vga7vqZP8pvgQQ" target="_blank">大模型迎来「开源季」，盘点过去一个月那些开源的LLM和数据集</a>
+    |  
+
 </br>
 </br>
 AI论文: 
