--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -3303,6 +3303,8 @@ Biochemistry Field：
   <br />
 Food Computation Field：
 <br />
+    <a href="https://www.cs.rpi.edu/~zaki/" target="_blank">Mohammed J. Zaki</a>
+    |
     <a href="http://vireo.cs.cityu.edu.hk/jingjing/" target="_blank">Jingjing Chen [<a href="https://mp.weixin.qq.com/s/ZzRZFb4FKIy2mDwMNguf3g" target="_blank">Report</a>]</a>
     |
     <a href="https://vipl.ict.ac.cn/people/wqmin/" target="_blank">Weiqing Min</a>
