--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1239,7 +1239,9 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/VleZkQT6Vga7vqZP8pvgQQ" target="_blank">大模型迎来「开源季」，盘点过去一个月那些开源的LLM和数据集</a>
     |  
-
+   <!-- 5.18 -->
+    <a href="https://mp.weixin.qq.com/s/p3QLJhs7l6belK-KR5mknA" target="_blank">对话卫瓴杨炯纬：AI 大模型时代，怎么做好应用者？</a>
+    |
 </br>
 </br>
 AI论文: 
@@ -3304,6 +3306,8 @@ Biochemistry Field：
 Food Computation Field：
 <br />
     <a href="https://www.cs.rpi.edu/~zaki/" target="_blank">Mohammed J. Zaki</a>
+    |
+    <a href="https://dmis.korea.ac.kr/publications" target="_blank">Sunkyu Kim</a>
     |
     <a href="http://vireo.cs.cityu.edu.hk/jingjing/" target="_blank">Jingjing Chen [<a href="https://mp.weixin.qq.com/s/ZzRZFb4FKIy2mDwMNguf3g" target="_blank">Report</a>]</a>
     |
