--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1242,6 +1242,9 @@ ChatGPT:
    <!-- 5.18 -->
     <a href="https://mp.weixin.qq.com/s/p3QLJhs7l6belK-KR5mknA" target="_blank">对话卫瓴杨炯纬：AI 大模型时代，怎么做好应用者？</a>
     |
+   <!-- 5.21 -->
+    <a href="https://mp.weixin.qq.com/s/G6HZDf5BpPs1uom0r8qNzg" target="_blank">大羊驼、羊驼、小羊驼和ChatGPT比差在哪儿？CMU副教授测评了7个类ChatGPT大模型</a>
+    |
 </br>
 </br>
 AI论文: 
@@ -3305,6 +3308,8 @@ Biochemistry Field：
   <br />
 Food Computation Field：
 <br />
+    <a href="https://dmis.korea.ac.kr/publications" target="_blank">Jaewoo Kang</a>
+    |
     <a href="https://www.cs.rpi.edu/~zaki/" target="_blank">Mohammed J. Zaki</a>
     |
     <a href="https://dmis.korea.ac.kr/publications" target="_blank">Sunkyu Kim</a>
