--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -414,6 +414,8 @@
     <br/>
     <a href="https://mp.weixin.qq.com/s/RyottZj01o-H9OvuST8jJg" target="_blank">Soundness？Excitement？官方解读ACL 2023论文评分机制</a>
     |
+    <a href="https://mp.weixin.qq.com/s/4gZRZvRZMkuLOh_GDlvROQ" target="_blank">信工所14篇论文被顶级国际会议ACL 2023录用，一文速览！</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/TDWEGWe1zJrY5af5lIORAw" target="_blank">CCCF精选｜机器学习：从先验假设到自动化——迈向通用人工智能的必然步骤</a>
     |
@@ -1238,13 +1240,53 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/9TmW5nwLLjg9eZ59nv91Qg" target="_blank">重磅内幕：OpenAI即将开源新模型！开源社区的繁荣，全靠大厂「施舍」？</a>
     |
     <a href="https://mp.weixin.qq.com/s/VleZkQT6Vga7vqZP8pvgQQ" target="_blank">大模型迎来「开源季」，盘点过去一个月那些开源的LLM和数据集</a>
-    |  
+    | 
+   <!-- 5.17 -->
+    <a href="https://mp.weixin.qq.com/s/E6W7C7bobZNSKpnncGifhQ" target="_blank">ChatGPT大杀四方，文心一言紧随其后，大模型到底有什么魔力？大佬带你深度剖析GPT</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/wE0hjK2PaxEQpTyOTFNunQ" target="_blank">重磅内幕：OpenAI即将开源新模型！开源社区的繁荣，全靠大厂「施舍」？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RIGm1pJrUVxDpilBF2G7HQ" target="_blank">北京制定通用人工智能创新措施，这21项值得关注</a>
+    |   
    <!-- 5.18 -->
     <a href="https://mp.weixin.qq.com/s/p3QLJhs7l6belK-KR5mknA" target="_blank">对话卫瓴杨炯纬：AI 大模型时代，怎么做好应用者？</a>
     |
+    <a href="https://mp.weixin.qq.com/s/xuOyBWb-_X4VPZbfS9JOOA" target="_blank">惊艳！70款ChatGPT官方插件评测来啦！超全场景应用，仅用自然语言即可开发</a>
+    |
+   <!-- 5.19 -->
+    <a href="https://mp.weixin.qq.com/s/SbupHC5f-3oFiMePswnCIA" target="_blank">谷歌发布技术报告：PaLM-2 推理超越 GPT-4，训练文本是第一代近5倍</a>
+    |   
    <!-- 5.21 -->
     <a href="https://mp.weixin.qq.com/s/G6HZDf5BpPs1uom0r8qNzg" target="_blank">大羊驼、羊驼、小羊驼和ChatGPT比差在哪儿？CMU副教授测评了7个类ChatGPT大模型</a>
     |
+    <a href="https://mp.weixin.qq.com/s/HltapKlbFPfTmuERCDiA9A" target="_blank">ChatGPT的工作原理，这篇文章说清楚了！</a>
+    |
+   <!-- 5.22 -->
+    <a href="https://mp.weixin.qq.com/s/iuQANmwCS7AXQRik7HwQPg" target="_blank">中文医学大模型“本草”（原名华驼）：医学知识增强在中文大型语言模型指令微调上的初步探索</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/u9eTtZbOUHEmet8HIaUnfA" target="_blank">有证据了，MIT表明：大型语言模型≠随机鹦鹉，确实能学到语义</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BYzWzXJ4SOuX_xZ78FsdVQ" target="_blank">吴飞：大模型的涌现机理探析思考｜GPT通识课第四课，浙大设计全程直播！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/deKVGxf-Zrbb1Pjui5CdUg" target="_blank">上交清华搞事情！发起最全学科大模型中文知识及推理评测！GPT-4 竟然血洗所有国产模型</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/woc2nwEXatVXFOiOwPtrxA" target="_blank">国内首个大模型评测数据集（MMCU）问世 加速完善国产AI产业图谱</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jyiQSRKg3AXNex0YeROzZw" target="_blank">数据规模缩小 200 倍！超低训练成本的指令微调，完美复刻大模型</a>
+    |
+   <!-- 5.23 -->
+    <a href="https://mp.weixin.qq.com/s/XK0dBnlhcu3hbcgSvr_rMg" target="_blank">让GPT-4推理提升17倍的技巧！普林斯顿清华姚班校友提出全新「思维树ToT」框架，让LLM反复思考</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/aI4Ltwmm-YXcpT9aiJDdRQ" target="_blank">GPT-4推理提升1750%！DeepMind提出全新思维树框架，让LLM反复思考</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Oze93Brun-AQUBI5Tt1b6w" target="_blank">没有RLHF，一样媲美GPT-4、Bard，Meta发布650亿参数语言模型LIMA</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/onfBvomLBUemlaosJQsxoQ" target="_blank">Meta用《圣经》训练超多语言模型：识别1107种、辨认4017种语言</a>
+    | 
+   <!-- 5.24 -->
+    <a href="https://mp.weixin.qq.com/s/XK0dBnlhcu3hbcgSvr_rMg" target="_blank">将入学考试题搬进中文大模型数据集，20477道题目，还带4个候选答案</a>
+    |    
+
 </br>
 </br>
 AI论文: 
@@ -2813,7 +2855,7 @@ NLP/KG Field：
     <a href="https://warwick.ac.uk/fac/sci/dcs/people/weiren_yu/" target="_blank">Weiren Yu</a>
     |
 <!-- Canada -->
-    <a href="https://sites.ualberta.ca/~bang3/index.html" target="_blank">Bang Liu</a> 
+    <a href="http://www-labs.iro.umontreal.ca/~liubang/" target="_blank">Bang Liu</a> 
     |
     <a href="http://www.xiaodanzhu.com/about.html" target="_blank">Xiaodan Zhu</a> 
     |
@@ -3176,6 +3218,9 @@ Visual Analytics Field:
     |
 <!-- Tongji University -->
     <a href="http://nancao.org/" target="_blank">Nan Cao [<a href="https://idvxlab.com/index.html" target="_blank">iDVX_Eng</a>] [<a href="https://mp.weixin.qq.com/s/5na5C64RH2tWIicodcVG-A" target="_blank">iDVX_CN</a>]</a>
+    |
+<!-- 香港科技大学（广州）信息枢纽数据科学与分析学域-->
+    <a href="https://luoyuyu.vip/" target="_blank">Yuyu Luo</a>
     |
   <br />
   <br />
