--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1255,11 +1255,16 @@ ChatGPT:
     |
    <!-- 5.19 -->
     <a href="https://mp.weixin.qq.com/s/SbupHC5f-3oFiMePswnCIA" target="_blank">谷歌发布技术报告：PaLM-2 推理超越 GPT-4，训练文本是第一代近5倍</a>
-    |   
+    |
+   <!-- 5.20 -->
+    <a href="https://mp.weixin.qq.com/s/w-iM31viZPYMEnX_hvMB4w" target="_blank">语音输入、多版本答案、……这八件事Bard能而ChatGPT不能做</a>
+    |    
    <!-- 5.21 -->
     <a href="https://mp.weixin.qq.com/s/G6HZDf5BpPs1uom0r8qNzg" target="_blank">大羊驼、羊驼、小羊驼和ChatGPT比差在哪儿？CMU副教授测评了7个类ChatGPT大模型</a>
     |
     <a href="https://mp.weixin.qq.com/s/HltapKlbFPfTmuERCDiA9A" target="_blank">ChatGPT的工作原理，这篇文章说清楚了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0ZF09i8VquUrMfuEa0-e4A" target="_blank">7 Papers | 浙大研究获SIGMOD 2023最佳论文；GPT-4拿下最难数学推理数据集新SOTA</a>
     |
    <!-- 5.22 -->
     <a href="https://mp.weixin.qq.com/s/iuQANmwCS7AXQRik7HwQPg" target="_blank">中文医学大模型“本草”（原名华驼）：医学知识增强在中文大型语言模型指令微调上的初步探索</a>
@@ -1285,8 +1290,20 @@ ChatGPT:
     | 
    <!-- 5.24 -->
     <a href="https://mp.weixin.qq.com/s/XK0dBnlhcu3hbcgSvr_rMg" target="_blank">将入学考试题搬进中文大模型数据集，20477道题目，还带4个候选答案</a>
-    |    
-
+    |
+    <a href="https://mp.weixin.qq.com/s/XfUOYUNq8uwpRcyTeQWH-g" target="_blank">Meta再开源里程碑级模型！MMS模型可识别4000+语言，生成1000+语言</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/WC1Bdp_zxMLfQzaHq8tj1w" target="_blank">没有RLHF，一样媲美GPT-4！Meta发布650亿参数模型LIMA</a>
+    |
+   <!-- 5.25 -->
+    <a href="https://mp.weixin.qq.com/s/VfrDUZ2ZKOTlRhsY_G6buA" target="_blank">基于GPT-4的人机物融合应用构造实践</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/YXLL6DS9dYTCuw5Ek1VpOg" target="_blank">大模型的思想钢印：如何让ChatGPT相信水是有毒的？中文信息处理实验室最新研究揭示虚假信息在大模型中的扩散机制</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/l-XMuaeyI07B-GMrFRrEsQ" target="_blank">24小时内、200美元复制RLHF过程，斯坦福开源「羊驼农场」模拟器</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/L_66ZWTeLE43gQtSi1reEw" target="_blank">马腾宇团队新出大模型预训练优化器，比Adam快2倍，成本减半</a>
+    |     
 </br>
 </br>
 AI论文: 
@@ -3221,6 +3238,9 @@ Visual Analytics Field:
     |
 <!-- 香港科技大学（广州）信息枢纽数据科学与分析学域-->
     <a href="https://luoyuyu.vip/" target="_blank">Yuyu Luo</a>
+    |
+<!-- 杭州电子科技大学.  -->
+    <a href="https://faculty.hdu.edu.cn/rwysyszmtxy/zzg2/main.htm" target="_blank">Zhiguang Zhou</a>
     |
   <br />
   <br />
