--- a/pages/publications.html
+++ b/pages/publications.html
@@ -138,7 +138,7 @@
 
 
 
-    <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>*, <a href="http://www.cse.cqu.edu.cn/info/2096/3500.htm" target="_blank">Sen Wang</a>, Jianyuan Lu, and <a href="http://www.cse.cqu.edu.cn/info/2096/7112.htm" target="_blank">Qilin Fan</a>, <a href="#"><strong><font color= "#00066f">HA-D3QN: Embedding Virtual Private Cloud in Cloud Data Centers with Heuristic Assisted Deep Reinforcement Learning</font></strong></a>. Future Generation Computer Systems (<a href="https://www.sciencedirect.com/journal/future-generation-computer-systems"><strong><u><font color="#874e26">FGCS</font></u></strong></a>). (IF = 7.307 in 2022, JCR Q1, 中科院 Q2)</li> 
+    <li><a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, Jiaxin Hou, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="http://www.cse.cqu.edu.cn/info/2095/4456.htm" target="_blank">Yingbo Wu</a>*, <a href="http://www.cse.cqu.edu.cn/info/2096/3500.htm" target="_blank">Sen Wang</a>, Jianyuan Lu, and <a href="http://www.cse.cqu.edu.cn/info/2096/7112.htm" target="_blank">Qilin Fan</a>, <a href="#"><strong><font color= "#00066f">HA-D3QN: Embedding Virtual Private Cloud in Cloud Data Centers with Heuristic Assisted Deep Reinforcement Learning</font></strong></a>. Future Generation Computer Systems (<a href="https://www.sciencedirect.com/journal/future-generation-computer-systems"><strong><u><font color="#874e26">FGCS</font></u></strong></a>). (IF = 7.307 in 2022, JCR Q1, 中科院 Q1)</li> 
 
 
 <!--     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong><sup>#</sup>, Jiasheng Zhang<sup>#</sup>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, Xiaohong Zhang, and <a href="http://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f"> TKBData: A Large-Scale Temporal Knowledge Base Dataset with Evaluation on State-of-the-Art Tasks</font></strong></a>.
@@ -228,11 +228,23 @@ Journal of Computer Applications (<a href="http://www.joca.cn/CN/volumn/home.sht
     <li> (SELECTED) <a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank">Zenglin Xu</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, and <a href="https://dblp.uni-trier.de/pers/hd/w/Wang:Yafang" target="_blank">Yafang Wang</a>, <a href="http://www.juestc.uestc.edu.cn/cn/article/doi/10.3969/j.issn.1001-0548.2016.04.012"><strong><font color= "#00066f">Review on Knowledge Graph Techniques</font></strong></a>. Journal of University of Electronic Science and Technology of China (<a href="http://www.juestc.uestc.edu.cn/"><strong><u><font color="#874e26">JUESTC</font></u></strong></a>). (In Chinese)
 </ol>
 
+<hr>
+
+
+<h4>Manuscript/Preprints</h4>
+<ol start="1">    
+    <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, Yangyang Wang, Lu Wang, and Gaofeng Zhao, <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8079812"><strong><font color= "#00066f">A comparison of learning rules in pulse-based neural networks</font></strong></a>. The 13th International Computer Conference on Wavelet Active Media Technology and Information Processing (<a href="http://www.waveletlab.org/cms/article/13/2017-04/20170409-141933.html"><strong><u><font color="#874e26">ICCWAMTIP-16</font></u></strong></a>). Chengdu, China, December 16-18 2016 (EI Indexed)</li>
+</ol>
+
+
 
 <hr>
 
 <h4>Patents</h4>
-<ol start="1">    
+<ol start="1">
+    <li>Jinze Sun, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, Ling Zhan, and <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href=""><strong><font color= "#00066f">TemT: A New Temporal Knowledge Graph Completion Method with Transformer Hawkes Process and Random Walk Aggregation Strategy</font></strong></a>, 2023.05.28, China (Submitted)</li>
+
+
     <li><a href="https://scholar.google.com/citations?hl=en&user=gF0H9nEAAAAJ" target="_blank">Zenglin Xu</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://csr.swufe.edu.cn/info/1042/1672.htm" target="_blank">Bin Liu</a>, <a href="https://dblp.uni-trier.de/pers/hd/l/Li:Guangxi" target="_blank">Guangxi Li</a>, <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/w/Wang:Yafang" target="_blank">Yafang Wang</a>, <a href="https://cprs.patentstar.com.cn/Search/Detail?ANE=7BEA9GEB9CICAEHA6FAA9EFAAFHAEHHA9BGGCGFADHFA6AEA"><strong><font color= "#00066f">A Method of Knowledge Base Completion by Variational Bayesian Neural Tensor Decomposition</font></strong></a> (No. ZL201610578882.9), 2018.09.04, China (Authorized)</li>
 
     
