--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -180,6 +180,17 @@
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
+<!-- Knowledge engineering - A-->
+    <a href="" target="_blank">ACL</a>
+    |
+    <a href="" target="_blank">ICDCS</a>
+    |
+    <a href="https://icde2024.github.io/index.html" target="_blank">ICDE</a>
+    |
+    <a href="" target="_blank">ACM SIGMOD</a>
+    |
+    <a href="" target="_blank">VLDB</a>
+    |
 <!-- software engineering - A-->
    <a href="https://conf.researchr.org/track/icse-2024/icse-2024-research-track" target="_blank">ICSE</a>
     |
@@ -367,6 +378,9 @@
     <a href="#" target="_blank">ICWL</a>
     |
     <a href="https://ickg2023.zhonghuapu.com/" target="_blank">ICKG</a>
+    |
+<!-- Multimedia Learning -->
+    <a href="http://mmasia2023.org/index.html" target="_blank">ChinaMM</a>
     |
 <!-- software engineering - others -->
     <a href="https://conferences.computer.org/sse/2023/cfp/" target="_blank">SSE</a>
@@ -1288,6 +1302,8 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/onfBvomLBUemlaosJQsxoQ" target="_blank">Meta用《圣经》训练超多语言模型：识别1107种、辨认4017种语言</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/etNeAvVvkSXRxvbMzRIcVw" target="_blank">多模态大模型「卷」向智能文档，只为解放打工人的双手</a>
+    | 
    <!-- 5.24 -->
     <a href="https://mp.weixin.qq.com/s/XK0dBnlhcu3hbcgSvr_rMg" target="_blank">将入学考试题搬进中文大模型数据集，20477道题目，还带4个候选答案</a>
     |
@@ -1303,7 +1319,21 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/l-XMuaeyI07B-GMrFRrEsQ" target="_blank">24小时内、200美元复制RLHF过程，斯坦福开源「羊驼农场」模拟器</a>
     |
     <a href="https://mp.weixin.qq.com/s/L_66ZWTeLE43gQtSi1reEw" target="_blank">马腾宇团队新出大模型预训练优化器，比Adam快2倍，成本减半</a>
-    |     
+    |
+    <a href="https://mp.weixin.qq.com/s/vqdGdcWyYmPKukW5jV6Pyw" target="_blank">单GPU实现99%ChatGPT性能，「原驼」火了：手机也能微调大模型</a>
+    |
+   <!-- 5.26 -->
+    <a href="https://mp.weixin.qq.com/s/ouOx8e0EuAspvAeWEaTzUg" target="_blank">如何用 ChatGPT 做数据进阶可视化？（三维交互图与动图视频）</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/p9tx3q3Lpr4fNqdyxWhzyA" target="_blank">首个大规模使用工具的大模型来了：伯克利发布Gorilla</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/excNshRYv-CXExBi9cZFCA" target="_blank">AI大模型接管谷歌搜索：一夜之间，整个领域变天了</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/WQVjMmJp9VmXHA74_L1-3Q" target="_blank">比Adam快2倍！斯坦福马腾宇团队新出大模型预训练优化器，成本减半</a>
+    |
+   <!-- 5.28 -->
+    <a href="https://mp.weixin.qq.com/s/cP3PyW1w4-a4HtQlYFzQlg" target="_blank">阿里达摩院：GPT-4替代年薪60万的数据分析师只要几千块，论文已发</a>
+    |      
 </br>
 </br>
 AI论文: 
@@ -3010,6 +3040,12 @@ NLP/KG Field：
 <!-- 360 -->
     <a href="https://liuhuanyong.github.io/" target="_blank">Huanyong Liu</a>
     |
+  <br />
+  <br />
+Temporal KG Representation Learning Field：
+<br />
+    <a href="http://jsjytx.neuq.edu.cn/info/1037/1685.htm" target="_blank">Luyi Bai</a>
+    |    
   <br />
   <br />
 GNN Field：
