--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -380,6 +380,8 @@
     <a href="https://ickg2023.zhonghuapu.com/" target="_blank">ICKG</a>
     |
 <!-- Multimedia Learning -->
+    <a href="http://mmasia2023.org/" target="_blank">MM Asia</a>
+    |
     <a href="http://mmasia2023.org/index.html" target="_blank">ChinaMM</a>
     |
 <!-- software engineering - others -->
@@ -1333,6 +1335,8 @@ ChatGPT:
     |
    <!-- 5.28 -->
     <a href="https://mp.weixin.qq.com/s/cP3PyW1w4-a4HtQlYFzQlg" target="_blank">阿里达摩院：GPT-4替代年薪60万的数据分析师只要几千块，论文已发</a>
+    | 
+    <a href="https://zhuanlan.zhihu.com/p/632795115?utm_campaign=shareopn&utm_medium=social&utm_oi=37478916423680&utm_psn=1646177425833787392&utm_source=wechat_session&s_r=0" target="_blank">世界的参数倒影：为何GPT通过Next Token Prediction可以产生智能</a>
     |      
 </br>
 </br>
