--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1337,7 +1337,14 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/cP3PyW1w4-a4HtQlYFzQlg" target="_blank">阿里达摩院：GPT-4替代年薪60万的数据分析师只要几千块，论文已发</a>
     | 
     <a href="https://zhuanlan.zhihu.com/p/632795115?utm_campaign=shareopn&utm_medium=social&utm_oi=37478916423680&utm_psn=1646177425833787392&utm_source=wechat_session&s_r=0" target="_blank">世界的参数倒影：为何GPT通过Next Token Prediction可以产生智能</a>
-    |      
+    |
+    <a href="https://mp.weixin.qq.com/s/bwHRWyD5EmBSAvcSY_xjNA" target="_blank">7 Papers & Radios | 英伟达把GPT-4塞进我的世界；比Adam快2倍的大模型预训练优化器</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/9zDyyqaHA8Ghnh96f2IOLg" target="_blank">ChatGPT能写长篇小说了，ETH提出RecurrentGPT实现交互式超长文本生成</a>
+    |
+   <!-- 5.29 -->
+    <a href="https://mp.weixin.qq.com/s/PLkwPnuVmuBtAcdQnVG-MQ" target="_blank">他山之石丨OpenAI大神Andrej官方揭秘GPT大模型原理和训练过程</a>
+    |        
 </br>
 </br>
 AI论文: 
@@ -3210,6 +3217,9 @@ Spatial-Temporal Data Mining Field：
     |
 <!-- Arizona State University -->
     <a href="https://www.public.asu.edu/~wenwenl1/index.html" target="_blank">Wenwen Li</a>
+    | 
+<!--  Department of Computer Science in the University of Hong Kong (HKU) -->
+    <a href="https://sites.google.com/view/chaoh" target="_blank">Chao Huang</a>
     |     
   <br />
   <br />
