--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -199,6 +199,8 @@
     |   
     <a href="" target="_blank">ISWC</a>
     |
+    <a href="https://lrec-coling-2024.lrec-conf.org/" target="_blank">LREC-COLING [<a href="https://mp.weixin.qq.com/s/G_h98_ncaZAVT5jl1dsLHw" target="_blank">LREC-COLING 2024 Announcement</a>]</a>
+    |
     <a href="https://2024.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
     |
     <a href="" target="_blank">ICME</a>
@@ -1344,6 +1346,21 @@ ChatGPT:
     |
    <!-- 5.29 -->
     <a href="https://mp.weixin.qq.com/s/PLkwPnuVmuBtAcdQnVG-MQ" target="_blank">他山之石丨OpenAI大神Andrej官方揭秘GPT大模型原理和训练过程</a>
+    | 
+   <!-- 5.30 -->
+    <a href="https://mp.weixin.qq.com/s/hzjDNeoXYGShdKPAOqGPNA" target="_blank">LLM推理提速2.8倍，CMU清华姚班校友提出「投机式推理」引擎SpecInfer，小模型撬动大模型高效推理</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/HD8XYv9-U0q6YAU6-jFEmg" target="_blank">GPT-4等大模型迎来进化转折点：不只是使用，还会自己制作工具了</a>
+    | 
+   <!-- 5.31 -->
+    <a href="https://mp.weixin.qq.com/s/9NigLaUC0ea04jecg6gogg" target="_blank">LL新员工入职，钉钉斜杠「/」今天加入工作流！拯救6亿打工人，别等微软了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/maCHLJyX7qQtf8yUoc7U3g" target="_blank">连代码都没写就敢要融资：被ChatGPT带火的向量数据库，带来了一大波造富神话</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/lwJb8N420xfMTvXJPM2gtg" target="_blank">开源中文医疗大模型华佗GPT来了，真人医生盲测效果优于ChatGPT</a>
+    |
+   <!-- 6.1 -->
+    <a href="https://mp.weixin.qq.com/s/VTAz1hLZxmnjecqIVtnxog" target="_blank">对话中关村科金张杰：通用大模型落地企服赛道，领域适配是门槛</a>
     |        
 </br>
 </br>
