--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -434,6 +434,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/4gZRZvRZMkuLOh_GDlvROQ" target="_blank">信工所14篇论文被顶级国际会议ACL 2023录用，一文速览！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/bMESRXRVl0fPIYwsW3KoGg" target="_blank">自然语言处理顶会ACL 2023收录西湖大学工学院最新成果</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/TDWEGWe1zJrY5af5lIORAw" target="_blank">CCCF精选｜机器学习：从先验假设到自动化——迈向通用人工智能的必然步骤</a>
     |
@@ -1361,6 +1363,12 @@ ChatGPT:
     |
    <!-- 6.1 -->
     <a href="https://mp.weixin.qq.com/s/VTAz1hLZxmnjecqIVtnxog" target="_blank">对话中关村科金张杰：通用大模型落地企服赛道，领域适配是门槛</a>
+    |
+   <!-- 6.2 -->
+    <a href="https://mp.weixin.qq.com/s/npprAODiOm9IM9kT8uWpnQ" target="_blank">张俊林趣谈：GPT4是否已具备类人智慧，为何GPT通过Next Token Prediction可以产生智能</a>
+    | 
+   <!-- 6.3 -->
+    <a href="https://mp.weixin.qq.com/s/rrdHPNazKODs5scUGsGYfg" target="_blank">清华大学刘知远：大模型LLM领域，有哪些可以作为学术研究方向？</a>
     |        
 </br>
 </br>
