--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1364,6 +1364,8 @@ ChatGPT:
    <!-- 6.1 -->
     <a href="https://mp.weixin.qq.com/s/VTAz1hLZxmnjecqIVtnxog" target="_blank">对话中关村科金张杰：通用大模型落地企服赛道，领域适配是门槛</a>
     |
+    <a href="https://mp.weixin.qq.com/s/CoLFFQTF9QqL8lSbtaY-_Q" target="_blank">思维链如何释放语言模型的隐藏能力？最新理论研究揭示其背后奥秘</a>
+    |
    <!-- 6.2 -->
     <a href="https://mp.weixin.qq.com/s/npprAODiOm9IM9kT8uWpnQ" target="_blank">张俊林趣谈：GPT4是否已具备类人智慧，为何GPT通过Next Token Prediction可以产生智能</a>
     | 
