--- a/pages/activities.html
+++ b/pages/activities.html
@@ -73,6 +73,9 @@
     <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
 
 
+    <li><strong>PC member</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
+
+    
     <li><strong>PC member</strong>, The 22nd China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2023/index.html"><strong><u><font color="#874e26">CCL 2023</font></u></strong></a>), Haerbing, China, August 3-5, 2023</li>
 
 
