--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1328,6 +1328,8 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/vqdGdcWyYmPKukW5jV6Pyw" target="_blank">单GPU实现99%ChatGPT性能，「原驼」火了：手机也能微调大模型</a>
     |
+    <a href="https://mp.weixin.qq.com/s/Go_lBw77ktHuHz7FsUjY-w" target="_blank">大模型知识Out该怎么办？浙大团队探索大模型参数更新的方法—模型编辑</a>
+    |
    <!-- 5.26 -->
     <a href="https://mp.weixin.qq.com/s/ouOx8e0EuAspvAeWEaTzUg" target="_blank">如何用 ChatGPT 做数据进阶可视化？（三维交互图与动图视频）</a>
     |
@@ -1336,6 +1338,12 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/excNshRYv-CXExBi9cZFCA" target="_blank">AI大模型接管谷歌搜索：一夜之间，整个领域变天了</a>
     | 
     <a href="https://mp.weixin.qq.com/s/WQVjMmJp9VmXHA74_L1-3Q" target="_blank">比Adam快2倍！斯坦福马腾宇团队新出大模型预训练优化器，成本减半</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/Ou89Nxia_hG3glJVPn51jg" target="_blank">被比尔盖茨选中的GPT技术，是如何演进，又革谁的命？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/0qmmFIpVcpevibvdSDW8sg" target="_blank">当ChatGPT参加中国高考，把全国A卷B卷喂给它后，竟严重偏科！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BMry4WsHEjKTsFx6sjhOAg" target="_blank">港大、南大、清华抢先开源「复刻」版DragGAN，开箱即用！</a>
     |
    <!-- 5.28 -->
     <a href="https://mp.weixin.qq.com/s/cP3PyW1w4-a4HtQlYFzQlg" target="_blank">阿里达摩院：GPT-4替代年薪60万的数据分析师只要几千块，论文已发</a>
@@ -1348,12 +1356,18 @@ ChatGPT:
     |
    <!-- 5.29 -->
     <a href="https://mp.weixin.qq.com/s/PLkwPnuVmuBtAcdQnVG-MQ" target="_blank">他山之石丨OpenAI大神Andrej官方揭秘GPT大模型原理和训练过程</a>
-    | 
+    |
+    <a href="https://mp.weixin.qq.com/s/HBOCF0P_n_qvACw4z3M3wA" target="_blank">英伟达将GPT-4接入我的世界，无需人类插手，打游戏快15倍！</a>
+    |  
    <!-- 5.30 -->
     <a href="https://mp.weixin.qq.com/s/hzjDNeoXYGShdKPAOqGPNA" target="_blank">LLM推理提速2.8倍，CMU清华姚班校友提出「投机式推理」引擎SpecInfer，小模型撬动大模型高效推理</a>
     | 
     <a href="https://mp.weixin.qq.com/s/HD8XYv9-U0q6YAU6-jFEmg" target="_blank">GPT-4等大模型迎来进化转折点：不只是使用，还会自己制作工具了</a>
-    | 
+    |
+    <a href="https://mp.weixin.qq.com/s/sbwIHJMGcwWTEz6w1wMh1g" target="_blank">搜索引擎变天了！谷歌宣布开放「生成式搜索平台」！AI 大模型颠覆搜索体验</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xWOXQtwyzsYbK5K7j05lMw" target="_blank">OpenAI大神Andrej爆火演讲，官方第一次揭秘大模型原理和训练过程！</a>
+    |  
    <!-- 5.31 -->
     <a href="https://mp.weixin.qq.com/s/9NigLaUC0ea04jecg6gogg" target="_blank">LL新员工入职，钉钉斜杠「/」今天加入工作流！拯救6亿打工人，别等微软了</a>
     |
@@ -1361,17 +1375,57 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/lwJb8N420xfMTvXJPM2gtg" target="_blank">开源中文医疗大模型华佗GPT来了，真人医生盲测效果优于ChatGPT</a>
     |
+    <a href="https://mp.weixin.qq.com/s/QgL5-fTA99InHsoI7hJ8lw" target="_blank">一个技巧，让ChatGPT学会复杂编程，编程水平逼近人类程序员！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/dDUeRHAQiIPLqOKq-zgySg" target="_blank">谷歌训了28个15亿参数模型，说明数据对大模型训练的影响</a>
+    |   
    <!-- 6.1 -->
     <a href="https://mp.weixin.qq.com/s/VTAz1hLZxmnjecqIVtnxog" target="_blank">对话中关村科金张杰：通用大模型落地企服赛道，领域适配是门槛</a>
     |
     <a href="https://mp.weixin.qq.com/s/CoLFFQTF9QqL8lSbtaY-_Q" target="_blank">思维链如何释放语言模型的隐藏能力？最新理论研究揭示其背后奥秘</a>
     |
+    <a href="https://mp.weixin.qq.com/s/eSGZvJKl3WPgrAwp4Zxopg" target="_blank">张俊林趣谈：GPT4是否已具备类人智慧，为何GPT通过Next Token Prediction可以产生智能</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/26S-y9ZhTxi3KHWL6v62Ew" target="_blank">仅用自然语言，让ChatGPT输出连贯的长篇小说！苏黎世联邦理工大学提出RecurrentGPT</a>
+    |   
    <!-- 6.2 -->
     <a href="https://mp.weixin.qq.com/s/npprAODiOm9IM9kT8uWpnQ" target="_blank">张俊林趣谈：GPT4是否已具备类人智慧，为何GPT通过Next Token Prediction可以产生智能</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/DagTzfVNdTD12gBRjQ9LhQ" target="_blank">OpenAI新作，直指DeepMind格局小了！大模型复杂推理应逐步验证</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/qUowbRFh69kvMlknXoKwvg" target="_blank">小冰推出国内首个定制AI女友「半藏森林」，消息秒回，深情陪聊</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/gPfcv9chKq5i-XEdGf7gJQ" target="_blank">ChatGPT路线图曝光：没有GPT-5、识图功能要等到明年、GPT-3或将开源</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/wTxq-sJx3VqdOznx7T6lBg" target="_blank">新刊预告｜“ChatGPT/生成式人工智能与教育变革”专刊：华东师范大学学报（教育科学版）2023年第7期</a>
+    |  
    <!-- 6.3 -->
     <a href="https://mp.weixin.qq.com/s/rrdHPNazKODs5scUGsGYfg" target="_blank">清华大学刘知远：大模型LLM领域，有哪些可以作为学术研究方向？</a>
-    |        
+    |
+   <!-- 6.4 -->
+    <a href="https://mp.weixin.qq.com/s/6ZnPHTs9JzzoL_Wx8bvKgQ" target="_blank">大模型时代，程序员的技能演进——盘点那些更重要的、和不再重要的能力</a>
+    | 
+   <!-- 6.5 -->
+    <a href="https://mp.weixin.qq.com/s/64eI_I-HVDigYvmBTNon9w" target="_blank">GPT-4知道它是不是“胡说八道”吗？一篇关于大模型“自知之明”的研究</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/k49iKGohTqMK36CVnxKMqw" target="_blank">吴恩达ChatGPT课爆火：AI放弃了倒写单词，但理解了整个世界</a>
+    | 
+    <!-- 6.6 -->
+    <a href="https://mp.weixin.qq.com/s/omhoIYth8ZyI5WXqXbFKbw" target="_blank">16个ChatGPT工具，相当炸裂！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/3GlxhNNTJ8neKhQ79kDuZA" target="_blank">GPT-4知道它是不是“胡说八道”吗？一篇关于大模型“自知之明”的研究</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/znYjV2uXOF-k9BAKLmV8lQ" target="_blank"> GPT-4使用效果不好？美国奥本大学提出Prompt分类法，另辟蹊径构建Prompt设计指南 </a>
+    |   
+    <!-- 6.7 -->
+    <a href="https://mp.weixin.qq.com/s/lAdXtVfzziTRxz7SKWJauA" target="_blank">中文大语言模型赶考：商汤与上海AI Lab等新发布「书生·浦语」</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/JXBqPCpT2plCIbGUXs3AJQ" target="_blank">对话纷享销客 CEO 罗旭：大模型不能只看技术，还要做差异化的服务</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/5nAVmBPZg-CBWiFpePWi5w" target="_blank">一文速览大语言模型在推荐系统中的应用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/qeK_LUXkNaPMQI1N0DJDIQ" target="_blank">YuLan-RETA-LLM：在大语言模型中使用检索</a>
+    |            
 </br>
 </br>
 AI论文: 
